refactor: update Service to use entity objects directly